# Bachelor_Arbeit_VQA

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vqa_predictions.json
MLLM/: zero_shot.ipynb  zero_shot_on_test_data23_03_25.py  zero_shot_server.ipynb
MLLM_Qwen/: few_shot_in_context_learning_first_try_06_04_25.ipynb  few_shot_in_context_on_val_data_06_04_25 (1).py  fine_tune_qwen_from_5875.py  fine_tune_qwen_on_val.py  fine_tune_qwen_on_val_04_04_25.py  fine_tune_qwen_on_val_with_system_message_05_04_25.py  finetune-qwen-5.ipynb  zero_shot_first_try.ipynb  zero_shot_on_test_data23_03_25.py  zero_shot_on_val_data29_03_25.py  zero_shot_on_val_data_from_5875_29_03_25.py  zero_shot_system_message_val_29_3_25.py  zero_shot_val_from_5875.py
docs/: mkdocs.yml  selected_indices_101_examples.txt  selected_indices_few_shot_16_examples.txt  selected_indices_few_shot_32_examples.txt  train_indices_50percent.txt
models/: gemma_no_system_prompt.py  gemma_system_prompt.py
notebooks/: Evaluation 2.ipynb  XAI_first_try.ipynb  eda.ipynb  few_shot_examples.ipynb  gemma.ipynb  good_val_set.ipynb  half_train_set.ipynb  train_val_loss_both_models_1_10_04_25.ipynb  vit16_learning_rate.ipynb
resnet50_biobert/: check_gpu.py  config.py  dataset.py  model_cnn.py  model_text.py  model_transformer.py  test.py  test_inspect.py  train.py  xai.py
src/: process_data.py
temp/: __init__.py  dataset.py  features.py  get_data.py  plots.py
vit16_biobert/: config.py  dataset.py  model_text.py  model_transformer.py  model_vit.py  test.py  test_inspect.py  train.py
(+15 files in other folders)
